# This makefile is for the lifelines external translation tables

AUTOMAKE_OPTIONS = no-dependencies
### pkgdir := $(pkgdatadir)/tt
pkg_TT = \
	ANSEL_UTF-8.tt \
	CP850_UTF-8.tt \
	ISO-8859-2_UTF-8.tt \
	UTF-8_ANSEL.tt \
	UTF-8_CP850.tt \
	UTF-8_ISO-8859-3.tt \
	CP1250_UTF-8.tt \
	CP852_UTF-8.tt \
	ISO-8859-3_UTF-8.tt \
	UTF-8_CP1250.tt \
	UTF-8_CP852.tt \
	UTF-8_ISO-8859-4.tt \
	CP1251_UTF-8.tt \
	ISO-8859-4_UTF-8.tt \
	UTF-8_CP1251.tt \
	UTF-8_ISO-8859-1.tt \
	UTF-8__asciitex.tt \
	CP1252_UTF-8.tt \
	ISO-8859-15_UTF-8.tt \
	UTF-8_CP1252.tt \
	UTF-8_ISO-8859-15.tt \
	UTF-8__html.tt \
	CP437_UTF-8.tt \
	ISO-8859-1_UTF-8.tt \
	README \
	UTF-8_CP437.tt \
	UTF-8_ISO-8859-2.tt \
	UTF-8__unhtml.tt \
	UTF-8__TrCyrillicAscii.tt

EXTRA_DIST = \
	$(pkg_TT) \
	README
