# Process this file with automake to produce Makefile.in
# (configure will process the resulting Makefile.in to produce Makefile)

# AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = win32

EXTRA_DIST = arch.h btree.h \
	cache.h codesets.h cscurses.h \
	date.h feedback.h fpattern.h \
	gedcheck.h gedcom.h gengedc.h \
	icvt.h impfeed.h indiseq.h \
	isolangs.h interp.h \
	langinfz.h liflines.h list.h llnls.h lloptions.h llstdlib.h \
	menuitem.h metadata.h mystring.h \
	proptbls.h \
	screen.h sequence.h standard.h sys_inc.h \
	table.h translat.h uiprompts.h \
	version.h warehouse.h xlat.h zstr.h


