# Process this file with automake to produce Makefile.in
# (configure will process the resulting Makefile.in to produce Makefile)

# AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = win32

EXTRA_DIST = \
	arch.h array.h btree.h \
	cache.h charprops.h codesets.h cscurses.h \
	date.h dbcontext.h dbfuncs.h dbfuncsi.h \
	feedback.h fpattern.h \
	gedcheck.h gedcom.h gedcom_macros.h generic.h gengedc.h \
	hashtab.h \
	icvt.h impfeed.h indiseq.h \
	isolangs.h interp.h \
	langinfz.h liflines.h list.h llnls.h lloptions.h llstdlib.h \
	log.h \
	menuitem.h metadata.h mychar.h mycurses.h mystring.h \
	object.h \
	proptbls.h pvalue.h \
	screen.h sequence.h standard.h sys_inc.h \
	table.h translat.h \
	ui.h uiprompts.h \
	version.h vtable.h xlat.h zstr.h


