# Process this file with automake to produce Makefile.in
# (configure will process the resulting Makefile.in to produce Makefile)

# AUTOMAKE_OPTIONS = no-dependencies

EXTRA_DIST = llines.ico \
             btedit/btedit.rc btedit/bteditCmd.dsp btedit/resource.h \
             dbverify/dbVerify.rc dbverify/dbverifyCmd.dsp dbverify/resource.h \
             llines/llines.rc llines/llinesprj.dsp llines/resource.h
